; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_tg3.c_tg3_resume_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_tg3.c_tg3_resume_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tg3 = type { i32 }

@CPU_STATE = common dso_local global i64 0, align 8
@CPU_MODE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tg3*, i64)* @tg3_resume_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tg3_resume_cpu(%struct.tg3* %0, i64 %1) #0 {
  %3 = alloca %struct.tg3*, align 8
  %4 = alloca i64, align 8
  store %struct.tg3* %0, %struct.tg3** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @CPU_STATE, align 8
  %7 = add nsw i64 %5, %6
  %8 = call i32 @tw32(i64 %7, i32 -1)
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @CPU_MODE, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @tw32_f(i64 %11, i32 0)
  ret void
}

declare dso_local i32 @tw32(i64, i32) #1

declare dso_local i32 @tw32_f(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
